[gd_scene load_steps=3 format=3 uid="uid://bk4pnm8a2pjon"]

[ext_resource type="Script" path="res://scenes/menu_all/main_menu.gd" id="1_twew2"]
[ext_resource type="Texture2D" uid="uid://bb8i0r56jo1i3" path="res://Assets/menu_images/tile000.png" id="2_bi4tu"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_twew2")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bi4tu")

[node name="scoreboard" type="Button" parent="TextureRect2"]
show_behind_parent = true
layout_mode = 0
offset_left = 851.0
offset_top = 362.0
offset_right = 1030.0
offset_bottom = 521.0

[node name="sair" type="Button" parent="TextureRect2"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0, 0, 0, 0)
show_behind_parent = true
layout_mode = 0
offset_left = 1083.0
offset_top = 578.0
offset_right = 1157.0
offset_bottom = 643.0

[node name="jogar" type="Button" parent="TextureRect2"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -190.0
offset_right = 456.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "
"

[node name="tutorial" type="Button" parent="TextureRect2"]
show_behind_parent = true
layout_mode = 0
offset_left = 595.0
offset_top = 363.0
offset_right = 779.0
offset_bottom = 522.0

[connection signal="pressed" from="TextureRect2/scoreboard" to="." method="_on_scoreboard_pressed"]
[connection signal="pressed" from="TextureRect2/sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="TextureRect2/jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="TextureRect2/tutorial" to="." method="_on_tutorial_pressed"]
